--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-barcode-builder": "^2.0.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-svg": "^13.8.0"
+    "react-native-svg": "^13.8.0",
+    "react-native-table-component": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
