--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ShaleeQureshi/Receipt-Vault#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^9.18.0",
     "firebase-admin": "^11.5.0"
